partedincludedir      =	-I$(top_srcdir)/include

noinst_LTLIBRARIES    =	libfat.la
libfat_la_SOURCES     = bootsector.c	\
			bootsector.h	\
			calc.c		\
			calc.h		\
			clstdup.c	\
			clstdup.h	\
			context.c	\
			context.h	\
			count.c		\
			count.h		\
			fat.c		\
			fat.h		\
			fatio.c		\
			fatio.h		\
			table.c		\
			table.h		\
			traverse.c	\
			traverse.h	\
			resize.c

INCLUDES = $(partedincludedir) $(INTLINCS)

MAINTAINERCLEANFILES = Makefile.in
